# napoleon_amp

./: .gitignore  Cargo.toml  GUIDE.md  README.md  build.rs
.cargo/: config.toml
.run/: Build.run.xml  Run Android.run.xml  Run Desktop.run.xml
assets/sprites/: NapoleonIcon.aseprite  dyn_playlist_icon.aseprite  star.aseprite  std_playlist_icon.aseprite
napoleon_amp_android/: Cargo.toml  build.rs  run_android.sh
napoleon_amp_android/src/: lib.rs
napoleon_amp_client_ui/: Cargo.toml
napoleon_amp_client_ui/src/: lib.rs
napoleon_amp_client_ui/src/napoleon_client/: colors.rs  mod.rs  texture_pool.rs
napoleon_amp_client_ui/src/napoleon_client/ui/: folder_list.rs  mod.rs  playlist_panel.rs  queue_panel.rs
napoleon_amp_client_ui/src/napoleon_client/ui/helpers/: custom_modal.rs  custom_scroll_area.rs  mod.rs  select_button.rs
napoleon_amp_client_ui/src/napoleon_client/ui/panels/: folder_list.rs  mod.rs  playlist_panel.rs  queue_panel.rs
napoleon_amp_client_ui/src/napoleon_client/ui/panels/folder_list/: mod.rs  modals.rs
napoleon_amp_client_ui/src/napoleon_client/ui/panels/playlist_panel/: mod.rs  modals.rs  rating.rs
napoleon_amp_client_ui/src/napoleon_client/ui/panels/queue_panel/: mod.rs
napoleon_amp_client_ui/src/napoleon_client/ui/panels/top_menu_bar/: mod.rs  modal.rs
napoleon_amp_core/: Cargo.toml
napoleon_amp_core/src/: assets.rs  discord_rpc.rs  id_generator.rs  instance.rs  lib.rs  paths.rs  pool.rs  resetable_once_cell.rs  song_pool.rs  song_tags.rs
napoleon_amp_core/src/collection/: folder.rs  mod.rs  playlist.rs  song.rs
napoleon_amp_core/src/config/: mod.rs
napoleon_amp_core/src/content/: mod.rs
napoleon_amp_core/src/content/folder/: content.rs  content_pool.rs  mod.rs
napoleon_amp_core/src/content/playlist/: data.rs  manager.rs  mod.rs  queue.rs  song_list.rs
napoleon_amp_core/src/content/playlist/playlists/: all_songs_playlist.rs  mod.rs  standard_playlist.rs
napoleon_amp_core/src/content/playlist/playlists/dynamic_playlist/: dynamic_playlist_data.rs  filter.rs  mod.rs  rules.rs
napoleon_amp_core/src/content/song/: mod.rs  song_cover_pool.rs  song_data.rs  song_pool.rs
napoleon_amp_core/src/content/song/song_data/: artist.rs  meta.rs  mod.rs  util.rs  v1.rs  v2.rs  v3.rs  v4.rs  v5.rs
napoleon_amp_core/src/data/: folder.rs  mod.rs  playlist.rs  song.rs
napoleon_amp_core/src/data/folder/: content.rs  mod.rs
napoleon_amp_core/src/data/playlist/: manager.rs  mod.rs  queue.rs
napoleon_amp_core/src/data/song/: master.rs  mod.rs  song_data.rs
napoleon_amp_core/src/instance/: client_settings.rs  data.rs  fixup.rs  iter_playlists.rs  mod.rs
napoleon_amp_core/src/net/: mod.rs  packet.rs  server.rs
napoleon_amp_core/src/paths/: mod.rs  song.rs
napoleon_amp_core/src/song/: add.rs
napoleon_amp_core/src/song_player_provider/: mod.rs  rodio_player_provider.rs
napoleon_amp_core/src/songs/: add.rs
src/: main.rs
src/napoleon_client/: mod.rs
src/napoleon_client/ui/: folder_list.rs  mod.rs  playlist_page.rs  playlist_panel.rs  queue_panel.rs
src/napoleon_client/ui/helpers/: mod.rs
