[package]
name = "napoleon_amp"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["napoleon_amp_android", "napoleon_amp_client_ui", "napoleon_amp_core"]

[dependencies]
eframe = { version = "0.33.3" }
image = "0.25.9"
napoleon_amp_client_ui = { path = "napoleon_amp_client_ui" }

[build-dependencies]
winresource = "0.1.30"
