[package]
name = "napoleon_amp_core"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs-next = "2.0"
serbytes = { git = "https://github.com/ltsoveranakin/serbytes.git" }
rodio = { version = "0.21", default-features = false, features = ["symphonia-all", "playback"] }
symphonia = { version = "0.5.4", features = ["mp3", "symphonia-bundle-mp3"] }
rand = "0.10"
discord-rich-presence = "1.1"
chrono = "0.4.43"