[package]
name = "napoleon_amp_core"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs-next = "2.0"
serbytes = { git = "https://github.com/ltsoveranakin/serbytes.git", features = ["fs"] }
simple_id = { git = "https://github.com/ltsoveranakin/simple_id.git", features = ["serbytes"] }
rodio = { version = "0.21", default-features = false, features = ["symphonia-all", "playback"] }
symphonia = { version = "0.5.4", features = ["mp3", "symphonia-bundle-mp3"] }
rand = "0.10"
discord-rich-presence = "1.1"
chrono = "0.4.43"
showfile = "0.1.1"
derive-enum-all-values = { git = "https://github.com/ltsoveranakin/derive-enum-all-values.git" }
include_dir = "0.7"
renet = "2.0"
renet_netcode = "2.0"